# knapsack

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  analysis.py  random_source.txt  select_instances.sh
cmake/: FindGurobi.cmake
instances/: n_1000_c_1000000_g_5_f_0.2_eps_0.01_s_500.txt  n_100_c_10000_g_4_f_0.1_eps_0.01_s_200.txt  n_10_c_1000_g_2_f_0.5_eps_0.1_s_50.txt  n_20_c_5000_g_3_f_0.2_eps_0.05_s_100.txt  n_5000_c_10000000_g_6_f_0.1_eps_0.01_s_5000.txt  select_instances.sh
src/: Brkga.hpp  Greedy.hpp  Instance.hpp  IntegerProgramming.hpp  Item.hpp  Knapsack.hpp  Model.hpp  Types.hpp  knapsack-solver.cpp  main.cpp
tuning/: README.md  configurations.txt  forbidden.txt  instances-list.txt  parameters.txt  scenario.txt  selected_instances.txt  target-runner
